--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
   "theme_color": "#00ffff",
   "icons": [
     {
-      "src": "icon.png",
+      "src": "assets/icons/icon.png",
       "sizes": "192x192",
       "type": "image/png"
     }
